--- a/css/typography.sass
+++ b/css/typography.sass
@@ -25,8 +25,11 @@ h1, h2, h3, h4, h5, h5
   margin: 0
 
 .general
-  h1,h2,h3,h4,h5,h6, .general_header
+  h1,h2,h3,h4,h5,h6
     font-family: $font-open-sans-condensed
+
+.general_header
+  font-family: $font-open-sans-condensed
 
 .general p, .general_paragraph
   font-family: $font-open-sans
